# crabmagick

./: .gitignore  LICENSE  NOTICE  README.md  bench-remote.sh  composer.json
rust/: Cargo.toml
rust/crates/crabmagick-core/: Cargo.toml
rust/crates/crabmagick-core/benches/: vs_libvips.rs
rust/crates/crabmagick-core/examples/: bench_all.rs  bench_encode.rs  bench_formats.rs  bench_rst.rs  diag_jpeg.rs  diag_jpeg2.rs  diag_jpeg3.rs  diag_jpeg4.rs  diag_jpeg5.rs  jxl_gap_probe.rs  probe_fast_path.rs  verify_decode.rs  verify_jpeg_roundtrip.rs  verify_ref.rs
rust/crates/crabmagick-core/src/: lib.rs  pipeline.rs  processor.rs
rust/crates/crabmagick-core/src/fast_webp/: decoder.rs  encoder.rs  extended.rs  huffman.rs  lossless.rs  lossless_transform.rs  mod.rs  vp8.rs  vp8_arithmetic_decoder.rs  vp8_enc.rs
rust/crates/crabmagick-core/src/jpeg2000_decode/: api.rs  math.rs  mod.rs  reader.rs
rust/crates/crabmagick-core/src/jpeg_decode/: bitstream.rs  color_convert.rs  components.rs  decoder.rs  errors.rs  headers.rs  huffman.rs  idct.rs  marker.rs  mcu.rs  mcu_prog.rs  misc.rs  mod.rs  unsafe_utils.rs  unsafe_utils_neon.rs  upsampler.rs  worker.rs
rust/crates/crabmagick-core/src/jpeg_decode_core/: bit_depth.rs  bytestream.rs  mod.rs  result.rs  serde.rs
rust/crates/crabmagick-core/src/jpeg_encode/: codec.rs  encode_simd.rs  error.rs  heuristics.rs  mod.rs  profile.rs  test_utils.rs  types.rs
rust/crates/crabmagick-core/src/jxl_decode/: mod.rs
rust/crates/crabmagick-core/src/jxl_encode/: api.rs  api_tests.rs  bit_writer.rs  container.rs  convenience.rs  debug_rect.rs  effort.rs  effort_expert_tests.rs  error.rs  f16.rs  icc.rs  mod.rs  parallel.rs  test_helpers.rs  tests.rs  trace.rs  validation.rs  validation_tests.rs
rust/crates/crabmagick-core/src/jxl_encode_simd/: adaptive_quant.rs  block_l2.rs  cfl.rs  dct16.rs  dct32.rs  dct4.rs  dct64.rs  dct8.rs  entropy.rs  epf.rs  fused_dct8.rs  gab.rs  gaborish5x5.rs  idct16.rs  idct32.rs  idct64.rs  mask1x1.rs  mod.rs  quantize.rs  transpose.rs  xyb.rs
rust/crates/crabmagick-core/src/jxl_encoder/: api.rs  api_tests.rs  bit_writer.rs  convenience.rs  debug_rect.rs  effort.rs  effort_expert_tests.rs  f16.rs  icc.rs  parallel.rs  test_helpers.rs  tests.rs  trace.rs  validation.rs  validation_tests.rs
rust/crates/crabmagick-core/src/jxl_encoder_simd/: adaptive_quant.rs  block_l2.rs  cfl.rs  dct16.rs  dct32.rs  dct4.rs  dct64.rs  dct8.rs  dequant.rs  entropy.rs  epf.rs  fused_dct8.rs  gab.rs  gaborish5x5.rs  idct16.rs  idct32.rs  idct64.rs  mask1x1.rs  mod.rs  noise.rs  pixel_loss.rs  quantize.rs  xyb.rs
rust/crates/crabmagick-core/src/jxl_oxide_vendored/: mod.rs
rust/crates/crabmagick-core/src/webp_decode/: decoder.rs  encoder.rs  extended.rs  huffman.rs  lossless.rs  lossless_transform.rs  mod.rs  transform.rs  vp8.rs  vp8_arithmetic_decoder.rs  vp8_enc.rs  yuv.rs  yuv_avx2.rs
rust/crates/crabmagick-core/src/zen_jp2/: api.rs  log.rs  math.rs  mod.rs  reader.rs
rust/crates/crabmagick-core/src/zenjpeg/: codec.rs  encode_simd.rs  error.rs  heuristics.rs  mod.rs  profile.rs  types.rs
rust/crates/crabmagick-core/src/zune_core/: bytestream.rs  mod.rs  serde.rs
rust/crates/crabmagick-core/src/zune_jpeg/: bitstream.rs  color_convert.rs  components.rs  decoder.rs  errors.rs  headers.rs  huffman.rs  idct.rs  mcu.rs  mcu_prog.rs  misc.rs  mod.rs  unsafe_utils.rs  unsafe_utils_avx2.rs  upsampler.rs  worker.rs
rust/crates/crabmagick-core/tests/: codec_smoke.rs  jxl_parallel_decode.rs
rust/crates/crabmagick-daemon/: Cargo.toml
rust/crates/crabmagick-daemon/src/: main.rs
rust/crates/crabmagick-ffi/: Cargo.toml
rust/crates/crabmagick-ffi/src/: lib.rs
rust/crates/crabmagick-php/: Cargo.toml
rust/crates/crabmagick-php/src/: lib.rs
rust/crates/fast-webp/: Cargo.toml
rust/crates/fast-webp/src/: lib.rs  mod.rs  vp8.rs  vp8_enc.rs  yuv.rs
rust/crates/jxl-encoder/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
rust/crates/jxl-encoder-simd/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
rust/crates/jxl-encoder-simd/src/: adaptive_quant.rs  block_l2.rs  cfl.rs  dct16.rs  dct32.rs  dct4.rs  dct64.rs  dct8.rs  dequant.rs  entropy.rs  epf.rs  fused_dct8.rs  gab.rs  gaborish5x5.rs  idct16.rs  idct32.rs  idct64.rs  lib.rs  mask1x1.rs  noise.rs  pixel_loss.rs  quantize.rs  transpose.rs  xyb.rs
rust/crates/jxl-encoder/examples/: distance_sweep.rs  fresh_encode.rs  lossless_pareto_calibrate.rs  lossy_pareto_calibrate.rs  multigroup_gallery.rs  test_300_debug.rs  test_multi_group.rs  test_ssim2.rs  test_ssim2_300.rs  test_ssim2_exact.rs  wasm_bench.rs
rust/crates/jxl-encoder/src/: api.rs  api_tests.rs  bit_writer.rs  convenience.rs  debug_rect.rs  effort.rs  effort_expert_tests.rs  f16.rs  icc.rs  lib.rs  parallel.rs  test_helpers.rs  tests.rs  trace.rs  validation.rs  validation_tests.rs
rust/crates/jxl-encoder/src/color/: xyb.rs
rust/crates/jxl-encoder/src/entropy_coding/: ans.rs  ans_decode.rs  cluster.rs  context_map.rs  encode.rs  encode_ans.rs  encode_huffman.rs  histogram.rs  huffman_tree.rs  hybrid_uint.rs  lz77.rs  token.rs
rust/crates/jxl-encoder/src/headers/: color_encoding.rs  extra_channels.rs  file_header.rs  (+2 more)
rust/crates/jxl-encoder/tests/: animation.rs  ans_roundtrip.rs  clic2025.rs  dct4x8_diagnostic.rs  frymire_diag.rs  hash_lock_expected.txt  hash_lock_features.rs  jpeg_reencoding.rs  lf_quality.rs  llf_invariants.rs  lossless_compare.rs  minimal_ans.rs  night_sky_blocks.rs  pathological.rs  quality_compare.rs  rate_control.rs  sixteenbit_metadata.rs
rust/crates/oxipix-core/: Cargo.toml
rust/crates/oxipix-core/src/: cache.rs  lib.rs  pipeline.rs  processor.rs
rust/crates/oxipix-php/: Cargo.toml
rust/crates/oxipix-php/src/: lib.rs
rust/crates/zen-jp2/: Cargo.toml  NOTICE.md
rust/crates/zen-jp2/src/: api.rs  lib.rs
rust/crates/zenjpeg/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  FEEDBACK.md  README.md
rust/crates/zenjpeg/src/: blur.rs  codec.rs  encode_simd.rs  error.rs  heuristics.rs  lib.rs  profile.rs  test_utils.rs  types.rs
(+873 files in other folders)
