[workspace]
members = [
    "crates/fast-webp",
    "crates/jxl-encoder",
    "crates/zenjpeg",
    "crates/zen-jp2",
    "crates/crabmagick-core",
    "crates/crabmagick-daemon",
]
resolver = "2"

[patch.crates-io]
zenjpeg = { path = "crates/zenjpeg" }
crabmagick-core = { path = "crates/crabmagick-core" }

[profile.release]
panic = "abort"
