[package]
name = "crabmagick-core"
version = "0.1.3"
edition = "2024"
description = "Pure-Rust image processing pipeline for PHP — multi-format decode and JXL/JPEG/WebP/PNG/AVIF encode"
license = "AGPL-3.0-or-later"
repository = "https://github.com/UsernameN0tAvailable/crabmagick"
keywords = ["image", "jxl", "jpeg", "webp", "iiif"]
categories = ["multimedia::images"]

[[bench]]
name = "vs_libvips"
harness = false

[dependencies]
aligned-vec = "0.6"
archmage = { version = "0.9.15", default-features = false, features = ["macros", "avx512"] }
brotli = { version = "8.0", default-features = false, features = ["std"], optional = true }
butteraugli = { version = "0.9", optional = true }
byteorder-lite = "0.1.0"
bytemuck = { version = "1.25", features = ["derive"] }
enough = { version = "0.4.3", features = ["std"] }
fast-ssim2 = { version = "0.8", features = ["imgref"], optional = true }
fearless_simd = { version = "0.4.0", optional = true }
fast_image_resize = { version = "5", features = ["rayon"] }
hashbrown = { version = "0.16", default-features = false, features = ["default-hasher"] }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp", "tiff", "bmp", "gif", "pnm"] }
imgref = "1.12"
brotli-decompressor = "5.0.0"
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
lru = "0.12"
magetypes = { version = "0.9.15", default-features = false, features = ["avx512"] }
memmap2 = "0.9"
moxcms = { version = "0.8", optional = true }
once_cell = { version = "1.21", default-features = false, features = ["race", "alloc"] }
pdfium-render = { version = "0.8", features = ["static"], optional = true }
png = "0.17"
quick-error = "2.0.1"
ravif = { version = "0.11", default-features = false, features = ["threading"], optional = true }
rayon = "1.10"
rayon-core = "1"
resvg = "0.44"
rgb = { version = "0.8", features = ["as-bytes"] }
safe_unaligned_simd = { version = "0.2.5", features = ["avx512"] }
tiff = "0.11"
tinyvec = { version = "1.10", features = ["alloc"] }
thiserror = { version = "2", default-features = false }
ultrahdr-core = { version = "0.3.0", default-features = false }
web-sys = { version = "0.3", features = ["console"], optional = true }
webp = "0.3"
whereat = "0.1.5"
wide = "1.1"
yuv = { version = "0.8", features = ["professional_mode"] }
zencodec = "0.1.11"
zenlayout = { version = "0.2", optional = true }
zenpixels = { version = "0.2.1", default-features = false, features = ["imgref"] }
zenresize = { version = "0.2", optional = true, features = ["layout"] }
zensim = { version = "0.2", optional = true }

[features]
default = ["std", "parallel", "unsafe-performance", "decoder", "yuv", "simd"]
avif = ["dep:ravif", "image/avif"]
butteraugli-loop = ["dep:butteraugli"]
convenience = []
debug-ac-strategy = []
debug-dc = []
debug-rect = []
debug-tokens = []
decoder = []
jpeg-reencoding = ["decoder", "dep:brotli"]
jp2 = []
layout = ["decoder", "dep:zenlayout", "dep:zenresize"]
logging = ["std"]
moxcms = ["dep:moxcms"]
parallel = ["std", "rayon"]
pdf = ["dep:pdfium-render"]
rate-control = ["dep:butteraugli"]
# Enables Rayon-backed multithreaded JPEG XL group decoding in the vendored jxl-oxide.
# Gated so the vendored `#[cfg(feature = "rayon")]` paths (jxl_threadpool/jxl_oxide) compile and
# `default_pool()` returns the global Rayon pool instead of the single-threaded `none()` pool.
rayon = []
simd = ["dep:fearless_simd", "std"]
ssim2-loop = ["dep:fast-ssim2"]
std = ["thiserror/std", "archmage/std", "magetypes/std"]
trace-bitstream = []
trellis = []
ultrahdr = ["decoder", "ultrahdr-core/std", "ultrahdr-core/transfer"]
unsafe-performance = []
yuv = []
zencodec = ["decoder"]
zensim-loop = ["dep:zensim"]
__alloc-instrument = []
__debug-tokens = []
__expert = []
__profile = []
__test-utils = []
vendor-upstream-tests = []

[build-dependencies]

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
libvips = "1.6"
rand = "0.8"
serde_json = "1"
fast_ssim2 = { package = "fast-ssim2", version = "0.8" }
yuvxyb = "0.5"
butteraugli = "0.9"
walkdir = "2"
jxl = "0.4"
