[package]
name = "crabmagick-daemon"
version = "0.1.0"
edition = "2021"
description = "Unix socket daemon for crabmagick — spawned automatically by PHP, no php.ini needed"
license = "MIT OR Apache-2.0"
repository = "https://github.com/UsernameN0tAvailable/crabmagick"

[[bin]]
name = "crabmagick-daemon"
path = "src/main.rs"

[dependencies]
crabmagick-core = { path = "../crabmagick-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
