[package]
name = "crabmagick-ffi"
version = "0.1.0"
edition = "2021"
description = "C-ABI cdylib for crabmagick — loaded by PHP via FFI, no PHP headers required"
license = "MIT OR Apache-2.0"
repository = "https://github.com/UsernameN0tAvailable/crabmagick"

[lib]
name = "crabmagick"
crate-type = ["cdylib"]

[dependencies]
crabmagick-core = { path = "../crabmagick-core" }
libc = "0.2"
