[package]
name = "crabmagick-php"
version = "0.1.0"
edition = "2021"
description = "PHP native extension for crabmagick — exposes \\Crabmagick\\Image via ext-php-rs"
license = "AGPL-3.0-or-later"
repository = "https://github.com/UsernameN0tAvailable/crabmagick"
keywords = ["php", "image", "extension", "jxl", "webp"]
categories = ["multimedia::images"]

[lib]
name = "crabmagick"
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = { version = "0.15.15", features = ["closure"] }
crabmagick-core = { path = "../crabmagick-core" }
