[package]
name = "crabmagick-core"
version = "0.1.0"
edition = "2021"

[dependencies]
fast-webp = { path = "../fast-webp" }
jxl-encoder = { path = "../jxl-encoder", default-features = false, features = ["std", "parallel", "unsafe-performance"] }
jxl-oxide = { version = "0.12.6", default-features = false, features = ["rayon"] }
zenjpeg = { path = "../zenjpeg", features = ["parallel"] }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
fast_image_resize = { version = "5", features = ["rayon"] }
zen-jp2 = { path = "../zen-jp2", optional = true }
rayon = "1.10"
dashmap = "6"
parking_lot = "0.12"
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros"] }
thiserror = "2"

[features]
default = []
jp2 = ["dep:zen-jp2"]
