[package]
name = "crabmagick-core"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust image processing pipeline for PHP — JXL crop-during-decode, JPEG/WebP/PNG/JXL encode, two-level in-process cache"
license = "MIT OR Apache-2.0"
repository = "https://github.com/UsernameN0tAvailable/crabmagick"
keywords = ["image", "jxl", "jpeg", "webp", "iiif"]
categories = ["multimedia::images"]

[dependencies]
fast-webp = { path = "../fast-webp" }
jxl-encoder = { path = "../jxl-encoder", default-features = false, features = ["std", "parallel", "unsafe-performance"] }
jxl-oxide = { version = "0.12.6", default-features = false, features = ["rayon"] }
zenjpeg = { path = "../zenjpeg", features = ["parallel"] }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
fast_image_resize = { version = "5", features = ["rayon"] }
zen-jp2 = { path = "../zen-jp2", optional = true }
rayon = "1.10"
dashmap = "6"
parking_lot = "0.12"
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros"] }
thiserror = "2"

[features]
default = []
jp2 = ["dep:zen-jp2"]
